[gd_scene load_steps=4 format=3 uid="uid://do637wmdlwagv"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_tguqv"]
[ext_resource type="Texture2D" uid="uid://bc3v6ufl4eb60" path="res://Resources/Textures/table_1.PNG" id="2_puuo1"]
[ext_resource type="Texture2D" uid="uid://br1v1m2hxe6t2" path="res://Resources/Textures/stone.PNG" id="3_wymny"]

[node name="Player" type="Node3D"]
script = ExtResource("1_tguqv")
Y_DELTA = 0.7

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.964095, 0.265556, 0, -0.265556, 0.964095, 0, 0, 0)

[node name="HorizontalTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="VerticalTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="LeftHand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.489348, -0.285983, -0.680003)

[node name="Sprite3D" type="Sprite3D" parent="LeftHand"]
transform = Transform3D(0.05, 0, 0, 0, -2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, 0, 0, 0)
texture = ExtResource("2_puuo1")

[node name="RightHand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.451217, -0.305048, -0.686359)

[node name="Sprite3D" type="Sprite3D" parent="RightHand"]
transform = Transform3D(0.05, 0, 0, 0, -2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, 0, 0, 0)
texture = ExtResource("3_wymny")
